Fix z-index

--- a/public/assets/css/admin/main.css
+++ b/public/assets/css/admin/main.css
@@ -27,7 +27,7 @@
     --font-size-sm: 13px;
     --font-size-bg: 15px;
     --image-size: 50px;
-    --nav-z-index: 3;
+    --nav-z-index: 10;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: var(--font-size);
     line-height: 1.3em;
